fix(css): animated toggle dark mode

--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -8,8 +8,8 @@
     position: relative;
     cursor: pointer;
     display: inline-block;
-    width: 200px;
-    height: 100px;
+    width: 100px;
+    height: 50px;
     background: #211042;
     border-radius: 50px;
     transition: 500ms;
@@ -19,10 +19,10 @@
   .toggle-button {
     position: absolute;
     display: inline-block;
-    top: 7px;
-    left: 6px;
-    width: 86px;
-    height: 86px;
+    top: 2.5px;
+    left: 3px;
+    width: 43px;
+    height: 43px;
     border-radius: 50%;
     background: #faeaf1;
     overflow: hidden;
@@ -40,52 +40,52 @@
   
   .crater-1 {
     background: #fffff9;
-    width: 86px;
-    height: 86px;
-    left: 10px;
-    bottom: 10px;
+    width: 43px;
+    height: 43px;
+    left: 5px;
+    bottom: 5px;
   }
   
   .crater-2 {
-    width: 20px;
-    height: 20px;
-    top: -7px;
-    left: 44px;
+    width: 10px;
+    height: 10px;
+    top: -3.5px;
+    left: 22px;
   }
   
   .crater-3 {
-    width: 16px;
-    height: 16px;
-    top: 20px;
-    right: -4px;
+    width: 8px;
+    height: 8px;
+    top: 10px;
+    right: -2px;
   }
   
   .crater-4 {
-    width: 10px;
-    height: 10px;
-    top: 24px;
-    left: 30px;
+    width: 5px;
+    height: 5px;
+    top: 12px;
+    left: 15px;
   }
   
   .crater-5 {
-    width: 15px;
-    height: 15px;
-    top: 40px;
-    left: 48px;
-  }
-  
-  .crater-6 {
-    width: 10px;
-    height: 10px;
-    top: 48px;
+    width: 7px;
+    height: 7px;
+    top: 20px;
     left: 20px;
   }
   
+  .crater-6 {
+    width: 5px;
+    height: 5px;
+    top: 24px;
+    left: 10px;
+  }
+  
   .crater-7 {
-    width: 12px;
-    height: 12px;
-    bottom: 5px;
-    left: 35px;
+    width: 6px;
+    height: 6px;
+    bottom: 3.5px;
+    left: 17.5px;
   }
   
   .star {
@@ -97,45 +97,45 @@
   }
   
   .star-1 {
-    width: 6px;
-    height: 6px;
-    right: 90px;
-    bottom: 40px;
+    width: 3px;
+    height: 3px;
+    right: 45px;
+    bottom: 20px;
   }
   
   .star-2 {
-    width: 8px;
-    height: 8px;
-    right: 70px;
-    top: 10px;
+    width: 4px;
+    height: 4px;
+    right: 35px;
+    top: 5px;
   }
   
   .star-3 {
-    width: 5px;
-    height: 5px;
-    right: 60px;
-    bottom: 15px;
+    width: 2.5px;
+    height: 2.5px;
+    right: 30px;
+    bottom: 7.5px;
   }
   
   .star-4 {
-    width: 3px;
-    height: 3px;
-    right: 40px;
-    bottom: 50px;
+    width: 1.5px;
+    height: 1.5px;
+    right: 20px;
+    bottom: 25px;
   }
   
   .star-5 {
-    width: 4px;
-    height: 4px;
-    right: 10px;
-    bottom: 35px;
+    width: 2px;
+    height: 2px;
+    right: 5px;
+    bottom: 17.5px;
   }
   
   .star-6,
   .star-7,
   .star-8 {
-    width: 10px;
-    height: 2px;
+    width: 5px;
+    height: 1px;
     border-radius: 2px;
     transform: rotate(-45deg);
     box-shadow: 5px 0px 4px 1px #fff;
@@ -146,19 +146,19 @@
   }
   
   .star-6 {
-    right: 30px;
-    bottom: 30px;
+    right: 15px;
+    bottom: 15px;
     animation-delay: -2s;
   }
   
   .star-7 {
-    right: 50px;
-    bottom: 60px;
+    right: 25px;
+    bottom: 30px;
   }
   
   .star-8 {
-    right: 90px;
-    top: 10px;
+    right: 45px;
+    top: 5px;
     animation-delay: -4s;
   }
   
@@ -187,7 +187,7 @@
   
   #hide-checkbox:checked + .toggle .toggle-button {
     background: #f7ffff;
-    transform: translateX(102px);
+    transform: translateX(51px);
     box-shadow: 0 0 35px 5px rgba(255, 255, 255);
   }
   
@@ -196,89 +196,89 @@
   }
   
   #hide-checkbox:checked + .toggle .star {
-    animation: move 2s infinite;
+    animation: shake 20s infinite;
     transform: none;
     box-shadow: none;
   }
   
   #hide-checkbox:checked + .toggle .star-1 {
-    width: 40px;
-    height: 10px;
+    width: 20px;
+    height: 5px;
     border-radius: 10px;
     background: #fff;
-    left: 20px;
-    top: 25px;
+    left: 5px;
+    top: 12.5px;
     box-shadow: none;
   }
   
   #hide-checkbox:checked + .toggle .star-2 {
-    width: 12px;
-    height: 12px;
+    width: 6px;
+    height: 6px;
     background: #fff;
-    left: 26px;
-    top: 23px;
+    left: 13px;
+    top: 11.5px;
     box-shadow: -1px 0 2px 0 rgba(0, 0, 0, 0.1);
   }
   
   #hide-checkbox:checked + .toggle .star-3 {
-    width: 16px;
-    height: 16px;
+    width: 8px;
+    height: 8px;
     background: #fff;
-    left: 35px;
-    top: 19px;
+    left: 17.5px;
+    top: 9.5px;
     box-shadow: -1px 0 2px 0 rgba(0, 0, 0, 0.1);
   }
   
   #hide-checkbox:checked + .toggle .star-4 {
-    width: 14px;
-    height: 14px;
+    width: 7px;
+    height: 7px;
     background: #fff;
-    left: 46px;
-    top: 21px;
+    left: 23px;
+    top: 10.5px;
     box-shadow: -1px 0 2px 0 rgba(0, 0, 0, 0.1);
   }
   
   #hide-checkbox:checked + .toggle .star-5 {
-    width: 60px;
-    height: 15px;
+    width: 30px;
+    height: 7.5px;
     border-radius: 15px;
     background: #fff;
-    left: 30px;
-    bottom: 20px;
+    left: 15px;
+    bottom: 10px;
     box-shadow: none;
   }
   
   #hide-checkbox:checked + .toggle .star-6 {
-    width: 18px;
-    height: 18px;
+    width: 9px;
+    height: 9px;
     background: #fff;
     border-radius: 50%;
-    left: 38px;
-    bottom: 20px;
+    left: 19px;
+    bottom: 10px;
     box-shadow: -1px 0 2px 0 rgba(0, 0, 0, 0.1);
   }
   
   #hide-checkbox:checked + .toggle .star-7 {
-    width: 24px;
-    height: 24px;
+    width: 12px;
+    height: 12px;
     background: #fff;
     border-radius: 50%;
-    left: 52px;
-    bottom: 20px;
+    left: 26px;
+    bottom: 10px;
     box-shadow: -1px 0 2px 0 rgba(0, 0, 0, 0.1);
   }
   
   #hide-checkbox:checked + .toggle .star-8 {
-    width: 21px;
-    height: 21px;
+    width: 10.5px;
+    height: 10.5px;
     background: #fff;
     border-radius: 50%;
-    left: 70px;
-    top: 59px;
+    left: 35px;
+    top: 29.5px;
     box-shadow: -1px 0 2px 0 rgba(0, 0, 0, 0.1);
   }
   
-  @keyframes move {
+  /* @keyframes move {
     0% {
       transform: none;
     }
@@ -290,12 +290,41 @@
     100% {
       transform: translateX(-2px);
     }
+  } */
+
+  @-webkit-keyframes shake {
+    0%, 100% {
+      -webkit-transform: translate3d(0, -5px, 0);
+      transform: translate3d(0, -5px, 0);
+    }
+    10%, 30%, 50%, 70%, 90% {
+      -webkit-transform: translate3d(5px, 5px, -2px);
+      transform: translate3d(5px, 5px, -2px);
+    }
+    20%, 40%, 60%, 80% {
+      -webkit-transform: translate3d(5px, -5px, 2px);
+      transform: translate3d(5px, -5px, 2px);
+    }
   }
+  @keyframes shake {
+    0%, 100% {
+      -webkit-transform: translate3d(0, -5px, 0);
+      transform: translate3d(0, -5px, 0);
+    }
+    10%, 30%, 50%, 70%, 90% {
+      -webkit-transform: translate3d(5px, 5px, -2px);
+      transform: translate3d(5px, 5px, -2px);
+    }
+    20%, 40%, 60%, 80% {
+      -webkit-transform: translate3d(5px, -5px, 2px);
+      transform: translate3d(5px, -5px, 2px);
+    }
+  } 
   
   p.morning {
     background: #e67e22;
   }
-  
+
   /* ######## CSS DARK ####### */
 .dark .bg-cod-gray{
     background-color: #e67e22 !important;
